# fastsend

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fastsend/: backend.py  main.py  models.py
src/fastsend/templates/: text.html
