[project]
name = "fastsend"
version = "1.0.4"
description = "Send data locally, fast!"
readme = "README.md"
authors = [
    { name = "kaangiray26", email = "kaangiray26@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "jinja2>=3.1.6",
    "qrcode>=8.2",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
]

[project.urls]
Homepage = "https://github.com/kaangiray26/fastsend"
Repository = "https://github.com/kaangiray26/fastsend"
Issues = "https://github.com/kaangiray26/fastsend/issues"

[project.scripts]
fastsend = "fastsend.main:app"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
